--- a/web/panels/services.xhtml
+++ b/web/panels/services.xhtml
@@ -6,6 +6,49 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
-    <h:outputLabel value="Hello, world"/>
+    <h:head>
+        <head>
+            <title>Services List</title>
+            <style type="text/css">
+                .center {
+                    display: flex;
+                    justify-content: center;
+                }
+            </style>
+        </head>
+    </h:head>
+
+    <h:body style="position: absolute; margin-left: auto; margin-right: auto; left: 0; right: 0; text-align: center;">
+        <h:outputLabel value="There you can find information about services!" /> <br/>
+
+        <b>Services List</b>
+
+        <div class="center">
+            <div class="wrapper">
+                <h:form style="margin-left: auto">
+                    <h:dataTable value="#{serviceBean.getServices()}" var="table"
+                                 border="2" cellspacing="1" cellpadding="1" >
+                        <h:column>
+                            <f:facet name="header">Id</f:facet>
+                            <h:outputText value="#{table.id}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">Title</f:facet>
+                            <h:outputText value="#{table.title}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">Fee</f:facet>
+                            <h:outputText value="#{table.fee}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">Type</f:facet>
+                            <h:outputText value="#{table.type}"/>
+                        </h:column>
+                    </h:dataTable>
+                </h:form>
+            </div>
+        </div> <b/>
+
+    </h:body>
 </f:view>
 </html>
