--- a/web/panels/services.xhtml
+++ b/web/panels/services.xhtml
@@ -26,7 +26,7 @@
         <div class="center">
             <div class="wrapper">
                 <h:form style="margin-left: auto">
-                    <h:dataTable value="#{serviceBean.getServices()}" var="table"
+                    <h:dataTable value="#{servicesBean.getServices()}" var="table"
                                  border="2" cellspacing="1" cellpadding="1" >
                         <h:column>
                             <f:facet name="header">Id</f:facet>
